added some game and fix search

--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,41 @@ nav {
   display:flex;
   background:black
 }
+
+.detailsImg {
+  margin-left: auto;
+  margin-right: auto;
+  display: block
+}
+
+.detailsContent {
+  margin-left: auto;
+  margin-right: auto;
+  display: block
+}
+
+.detailsTitle {
+  text-align: center;
+  margin-left: 130px
+}
+
+.deletButtonDetails {
+  margin-left: 20px;
+}
+
+
+
+textarea{
+  margin-left: auto;
+  margin-right: auto;
+  display: block
+}
+
+.saveAndEditButtonDetails{
+  margin-left: 50%;
+  
+}
+
+.gameCardLine{
+  display:flex;
+}
