--- a/src/App.css
+++ b/src/App.css
@@ -32,48 +32,73 @@
   }
 }
 
-.GameCardImg{
+.imagesContainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 7%;
+  text-align: center;
+  justify-content: space-evenly;
+  padding-top: 10px;
+}
+
+.GameCardImg {
   max-width: 400px;
+  max-height: 218px;
 }
 nav {
-  display:flex;
-  background:black
+  display: flex;
+  background: black;
 }
 
 .detailsImg {
   margin-left: auto;
   margin-right: auto;
-  display: block
+  display: block;
 }
 
 .detailsContent {
   margin-left: auto;
   margin-right: auto;
-  display: block
+  display: block;
 }
 
 .detailsTitle {
   text-align: center;
-  margin-left: 130px
 }
 
-.deletButtonDetails {
-  margin-left: 20px;
-}
-
-
-
-textarea{
+textarea {
   margin-left: auto;
   margin-right: auto;
-  display: block
+  display: block;
 }
 
-.saveAndEditButtonDetails{
-  margin-left: 50%;
-  
+.saveAndEditButtonDetails {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
-.gameCardLine{
-  display:flex;
+button {
+  box-shadow: 3px 4px 0px 0px #8a2a21;
+	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+	background-color:#c62d1f;
+	border-radius:18px;
+	border:1px solid #d02718;
+	
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:7px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #810e05;
+}
+
+button:hover {
+	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+	background-color:#f24437;
+}
+button:active {
+	position:relative;
+	top:1px;
 }
