adding media query css

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,8 @@ textarea {
   display: block;
 }
 
+
+
 button {
   box-shadow: 3px 4px 0px 0px #8a2a21;
 	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
@@ -102,3 +104,27 @@ button:active {
 	position:relative;
 	top:1px;
 }
+
+@media (min-width: 1900px) {
+
+  .imagesContainer {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: 480px;
+      text-align: center;
+      justify-content: space-evenly;
+      padding-top: 10px;
+  
+  }
+  .gameCardLine2{
+  padding-right: 347px
+  }
+  .gameCardLine3{
+  padding-right: 15px
+  }
+  
+  .gameCardLine4{
+  padding-right: 357px
+  }
+  
+  }
