--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   flex-wrap: wrap;
   margin-left: 7%;
   text-align: center;
-  justify-content: space-evenly;
+  justify-content: center;
   padding-top: 10px;
 }
 
@@ -78,53 +78,60 @@ textarea {
   display: block;
 }
 
-
-
 button {
   box-shadow: 3px 4px 0px 0px #8a2a21;
-	background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
-	background-color:#c62d1f;
-	border-radius:18px;
-	border:1px solid #d02718;
-	
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:17px;
-	padding:7px 25px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #810e05;
+  background: linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+  background-color: #c62d1f;
+  border-radius: 18px;
+  border: 1px solid #d02718;
+
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 17px;
+  padding: 7px 25px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #810e05;
 }
 
 button:hover {
-	background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
-	background-color:#f24437;
+  background: linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+  background-color: #f24437;
 }
 button:active {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
 
 @media (min-width: 1900px) {
-
   .imagesContainer {
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: 480px;
-      text-align: center;
-      justify-content: space-evenly;
-      padding-top: 10px;
-  
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 480px;
+    text-align: center;
+    justify-content: center;
+    padding-top: 10px;
   }
-  .gameCardLine2{
-  padding-right: 347px
+  .solo {
+    margin-left: auto;
+    margin-right: auto;
   }
-  .gameCardLine3{
-  padding-right: 15px
+  .imagesContainerNotFull {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 340px;
+    text-align: center;
+    justify-content: center;
+    padding-top: 10px;
   }
-  
-  .gameCardLine4{
-  padding-right: 357px
+  .gameCardLine2 {
+    padding-right: 347px;
   }
-  
+  .gameCardLine3 {
+    padding-right: 15px;
   }
+
+  .gameCardLine4 {
+    padding-right: 357px;
+  }
+}
