--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
+@font-face {
+  font-family: 'PressStart2P';
+  src: local('PressStart2P'), url(./fonts/PressStart2P-Regular.ttf) format('truetype');
+}
+
 .App {
   text-align: center;
+}
+.title {
+  margin-left: auto;
+  margin-right: auto;
+}
+body {
+  font-family: 'PressStart2P';
 }
 
 .App-logo {
@@ -7,7 +19,13 @@
   height: 40vmin;
   pointer-events: none;
 }
+a {
+  text-decoration: none;
+}
 
+h1 {
+  color: red;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -87,11 +105,12 @@ button {
 
   cursor: pointer;
   color: #ffffff;
-  font-family: Arial;
+  font-family: 'PressStart2P';
   font-size: 17px;
   padding: 7px 25px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #810e05;
+  padding-top: 10px;
 }
 
 button:hover {
